Added rudimentary authentication

--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -9,9 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Login</h1>
 
-    This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ '/var/www/escape-room/src/Controller/AuthController.php'|file_link(0) }}">src/Controller/AuthController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/var/www/escape-room/templates/auth/login.html.twig'|file_link(0) }}">templates/auth/index.html.twig</a></code></li>
