Added login code

--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}Game!{% endblock %}
 
 {% block body %}
 <style>
@@ -8,6 +8,7 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
+<div data-controller="hello"></div>
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
