--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,12 @@
 body {
     background-color: lightgray;
 }
+
+body#root {
+    background-color: blueviolet;
+}
+
+.login {
+    background-color: #5eb5e0;
+    color: brown;
+}
