--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,12 +1,55 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: lightgray;
-}
-
-body#root {
-    background-color: blueviolet;
 }
 
 .login {
     background-color: #5eb5e0;
     color: brown;
+}
+
+.gameList div.gameListItem {
+    display: block;
+    border: 1px solid black;
+    color: black;
+    background-color: lightgray;
+}
+
+
+.gameList div.selected {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.gameList div.pending {
+    background-color: lightseagreen;
+}
+
+.gameList div.ended {
+    background-color: lightcoral;
+}
+
+.gameList div.waiting {
+    background-color: lightgreen;
+}
+
+.gameList div:hover {
+    background-color: darkgray;
+    text-decoration: none;
+}
+
+.gameList div.gameListItem div {
+    display: inline-block;
+}
+
+.gameList div.gameListItem div.id {
+    min-width: 150px;
+}
+
+.gameList div.gameListItem div.status {
+    min-width: 100px;
+}
+
+.gameList div.gameListItem div.timeLeft {
+    min-width: 100px;
 }
